# amr-data-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  schema.sql
ingestion/: fetch_amr.py  load_to_db.py  transform.py
kestra/: amr_pipeline.yaml
local-ingestion/: ingestion.py
terraform/: main.tf  variables.tf
